--- a/.github/workflows/call-build-package.yml
+++ b/.github/workflows/call-build-package.yml
@@ -3,6 +3,10 @@ name: Build and Package
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   call-template:
     uses: zerihal/Workflow-Templates/.github/workflows/dotnet-release-pack-template.yml@main
