--- a/.github/workflows/build-pack.yml
+++ b/.github/workflows/build-pack.yml
@@ -71,7 +71,10 @@ jobs:
       run: dotnet pack DocParser/DocParser.csproj --configuration Release -o ./artifacts
 
     - name: Publish to GitHub Packages
-      run: dotnet nuget push "./artifacts/*.nupkg" --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --api-key ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push "./artifacts/*.nupkg" \
+            --source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
+            --api-key ${{ secrets.GITHUB_TOKEN }} \
+            --username "github-actions[bot]"
 
     - name: Show new version
       run: echo "✅ Built and published version ${{ steps.bump.outputs.new_version }}"
