--- a/DocParser.Tests/DocParser.Tests.csproj
+++ b/DocParser.Tests/DocParser.Tests.csproj
@@ -1,10 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48;net8.0;net9.0;net10.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+  </PropertyGroup>
+
+  <!-- Only include net48 when building/testing locally (this cannot be used on GitHub pipeline) -->
+  <PropertyGroup Condition="'$(CI)' != 'true'">
+    <TargetFrameworks>$(TargetFrameworks);net48</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
